--- a/base_framework/css/global.css
+++ b/base_framework/css/global.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900);
 button, input[type="button"], input[type="reset"], input[type="submit"] {
   appearance: none;
   background-color: #477dca;
@@ -610,14 +611,113 @@ th {
 
 /*==================================================================
 
-BASE FRAMEWORK
-MASTER CSS v.0.1
+BASE FRAMEWORK | MASTER CSS v.0.1
 CREATED BY: Nicholas Holloway
 
 ===================================================================*/
-.box {
+/*==================================================================
+    FONTS ===================================================================*/
+html, body {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.bg-gold {
+  background: #ecac00;
+}
+
+.bg-navy {
+  background: #002144;
+}
+
+.bg-white {
+  background: darker(#fff !important, 23.5%);
+}
+
+a {
+  -webkit-transition: all 900ms cubic-bezier(0.23, 1, 0.32, 1);
+  -moz-transition: all 900ms cubic-bezier(0.23, 1, 0.32, 1);
+  -o-transition: all 900ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: all 900ms cubic-bezier(0.23, 1, 0.32, 1);
+  /* linear */
+}
+
+/*==================================================================
+    NAVIGATION ===================================================================*/
+.navbar-list {
+  background: #ecac00;
+  border-color: transparent;
+  border-width: 0;
+}
+.navbar-list ul li a {
+  color: #002144 !important;
+  letter-spacing: calc(24px/9);
+  font-size: calc(18px * .75);
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 1.5em;
+}
+.navbar-list ul li a:hover {
+  color: #fff !important;
+}
+.navbar-list ul li:hover {
+  background: #c18c00;
+  color: #fff !important;
+  -webkit-transition: all 900ms cubic-bezier(0.23, 1, 0.32, 1);
+  -moz-transition: all 900ms cubic-bezier(0.23, 1, 0.32, 1);
+  -o-transition: all 900ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: all 900ms cubic-bezier(0.23, 1, 0.32, 1);
+  /* linear */
+}
+.navbar-list ul .sign-up {
+  background: #9d7200;
+}
+.navbar-list ul .sign-up a {
+  color: #fff !important;
+}
+.navbar-list ul .divider {
+  height: 30px;
+  margin-top: 15px;
+  background: #002144;
+}
+.navbar-list .logo {
+  color: #002144 !important;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding-top: 20px;
+  letter-spacing: calc(20px/10);
+}
+
+/*==================================================================
+    CONTENT AREAS ===================================================================*/
+section {
+  font-family: "Source Sans Pro";
+  padding: 3rem 0 3rem 0 !important;
+}
+section .content--area2 {
+  color: #fff !important;
+}
+section .hero {
+  padding: 5rem 0 5rem 0 !important;
+}
+section .hero .hero--content {
   margin: auto;
-  padding: 25px 0 0 0;
+  text-align: center !important;
+}
+section .hero .hero--content h1 {
+  color: #fff !important;
+  font-size: 6rem;
+  font-weight: 200;
+}
+section .hero .hero--content h2 {
+  color: #fff !important;
+  font-size: 2.8rem;
+  font-weight: 200;
+}
+
+/*==================================================================
+    FOOTER ===================================================================*/
+footer {
+  padding: 5rem 0 5rem 0 !important;
 }
 
 /*# sourceMappingURL=global.css.map */
