--- a/base_framework/css/sass/global.scss
+++ b/base_framework/css/sass/global.scss
@@ -3,4 +3,5 @@
 @import "partials/variables";
 @import "partials/normalize";
 @import "partials/mixins";
+@import "partials/layout";
 @import "partials/bespoke";
