--- a/base_framework/css/sass/partials/_bespoke.scss
+++ b/base_framework/css/sass/partials/_bespoke.scss
@@ -11,21 +11,33 @@ CREATED BY: Nicholas Holloway
     FONTS ===================================================================*/
 
 html, body {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: $font-family;
 }
 
 .bg-gold {
     background: $gold;
 }
+
 .bg-navy { 
     background: $navy;
 }
+.bg-lightgrey {
+    background: $gray-lighter;
+}
 .bg-white { 
-    background: $white-darker;
+    background: $white;
 }
 
 a {
     @include custTransition (900ms, $easeOutQuint);
+}
+
+.type--smaallcaps {
+    font-size: calc(18px * .75);
+    font-weight: 800;
+    text-transform: uppercase;
+    color: inherit;
+    letter-spacing: calc(18px/18);
 }
 
 /*==================================================================
@@ -35,15 +47,16 @@ a {
     background: $gold;
     border-color: transparent; 
     border-width: 0;
+    height: 52px;
     ul {
         li {
             a {
                 color: $navy !important;
-                letter-spacing: calc(24px/9);
+                letter-spacing: calc(20px/9);
                 font-size: calc(18px * .75);
                 font-weight: $font-semibold;
                 text-transform: uppercase;
-                padding: 1.5em;
+                padding: 1.2em;
                 
                 // Modifiers
 
@@ -66,11 +79,6 @@ a {
                 color: $white;
             }
         }
-        .divider {
-            height: 30px;
-            margin-top: 15px;
-            background: $navy;
-        }
     }
     
     // Child Objects
@@ -79,8 +87,7 @@ a {
         color: $navy !important;
         font-weight: $font-bold;
         text-transform: uppercase;
-        padding-top: 20px;
-        letter-spacing: calc(20px/10);
+        letter-spacing: calc(10px/10);
     }
 }
 
@@ -93,6 +100,7 @@ section {
     
     //Child Objects
     
+
     .content--area1 {
         
     }
@@ -117,9 +125,251 @@ section {
         }
     }
 }
-
-.box {
+section.newsection {
+    padding: $nopadding !important;
+    .title {
+            font-smoothing: antialiased;
+            -webkit-font-smoothing: antialiased;
+            margin-bottom: 1em;
+            display: block;
+            font-weight: 700;
+    }
+    .news--list {
+        li {
+            -webkit-font-smoothing: antialiased;
+            display: block;
+            margin-bottom: 1.5em;
+            padding-bottom: 1.5em;
+            border-bottom: solid thin $gray-lighter;
+        }
+    }
 }
+
+//CARD
+
+.card {
+    background: $white;
+    .card-title {
+        font-weight: $font-normal;
+    }
+    .card-action {
+        a {
+            color: $gold;
+            
+            // Modifiers
+            
+            &:hover {
+                color: $gold-dark;
+            }                
+        }
+    }
+}
+
+//TIMELINE
+
+.tm-timeline {
+    margin: 30px 0 0 0;
+    padding: $nopadding;
+    list-style: none;
+    position: relative;
+    
+    //Modifiers
+    
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 10px;
+        background: $gold;
+        left: 20%;
+        margin-left: -10px
+    }
+    
+    li {
+        position: relative;
+        
+        .tm--time {
+            display: block;
+            width: 25%;
+            padding-right: 100px;
+            position: absolute;
+            
+            &:nth-child(odd) {
+                span {
+                    color: $navy;
+                }
+            }            
+            
+            span {
+                display: block;
+                text-align: $align-right;
+                
+                //Modifiers
+                
+                &:first-child {
+                    font-size: 0.9em;
+                    color: #777777;                  
+                }
+                
+                &:last-child {
+                    font-size: 2.9em;
+                    color: $navy-light;               
+                }  
+            }
+        }
+
+        
+        .tm--label {
+            margin: 0 0 15px 25%;
+            background: $navy;
+            color: $white;
+            padding: 12px;
+            font-size: 1.2em;
+            font-weight: $font-light;
+            line-height: 1.4;
+            position: relative;
+            border-radius: 5px;
+            
+            //Modifiers
+            
+            &:after {
+                right: 100%;
+                border: solid transparent;
+                content: " ";
+                height: 0;
+                width: 0;
+                position: absolute;
+                pointer-events: none;
+                border-right-color: $navy;
+                border-width: 10px;
+                top: 10px;                    
+            }
+
+            &:nth-child(odd) {
+                
+                &:after {
+                    border-right-color: $navy;
+                }
+            }            
+            
+            h2 {
+                margin-top: 0px;
+                border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+                font-size: 20px;
+                margin: 0;
+                padding-bottom: 5px;
+                line-height: 26px;                
+            }
+            
+            p {
+                font-size: 16px;
+                line-height: $font-size-8;
+                margin: 10px 0;
+                
+                .light-text {
+                    font-size: 15px;
+                    font-weight: 200;
+                    line-height: 20px;                    
+                }
+            }
+        }
+        
+        .tm--icon {
+            width: 40px;
+            height: 40px;
+            font-size: 1.4em;
+            line-height: 40px;
+            -webkit-font-smoothing: antialiased;
+            position: absolute;
+            color: #fff;
+            background: $navy;
+            border-radius: 50%;
+            box-shadow: 0 0 0 8px $gold;
+            text-align: $align-center;
+            left: 20%;
+            top: 0;
+            margin: 0 0 0 -25px;            
+        }
+    }
+}
+
+//MEDIA QUERIES
+
+
+@media screen and (max-width: 65.375em) {
+    
+    .tm-timeline {
+
+        li {
+
+            .tm--time {
+
+                span {
+
+                    &:last-child {
+                        font-size: 1.5em
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 47.2em) {
+    .tm-timeline  {
+        
+        &:before {
+            display: none;
+        }
+        
+        li {
+         
+            .tm--time {
+                width: 100%;
+                position: relative;
+                padding: 0 0 20px 0;
+
+                span {
+                    text-align: $align-left;
+                }
+            }
+            
+            .tm--label {
+                margin: 0 0 30px 0;
+                padding: 1em;
+                font-weight: 400;
+                font-size: 95%; 
+                             
+                &:after {
+                    right: auto;
+                    left: 20px;
+                    border-right-color: transparent;
+                    border-bottom-color: $navy;
+                    top: -20px;                    
+                }
+                
+                &:nth-child(odd) {
+
+                    &:after {
+                        border-right-color: transparent;
+                        border-bottom-color: #212121;
+                    }
+                }                   
+            }
+            
+            .tm--icon {
+                position: relative;
+                float: right;
+                left: auto;
+                margin: -55px 5px 0 0px
+            }            
+        }
+    }
+}
+
+
+
 
 /*==================================================================
     FOOTER ===================================================================*/
